# numerical-methods

./: .coverage  .gitignore  README.md  differential_equations.py  docs.md  linear_algebra.py  pyproject.toml  requirements.txt  root_finding.py
notebooks/: examples.ipynb
numerical_methods/: differential_equations.py  linear_algebra.py  root_finding.py
tests/: test_differential_equations.py  test_linear_algebra.py  test_root_finding.py
